runit 0.7.1
Mon, 21 Oct 2002 16:50:09 +0200
  * man/runsv.8, doc/runlevels.html: typos.
  * runsvctrl.c, runsvstat.c: exit 111 on error.
  * runsvdir.c: continue reading directory when stat() on entry fails.

runit 0.7.0
Mon, 07 Oct 2002 11:26:27 +0200
  * runsvdir.c: check service directory's inode and device in addition
    to mtime; sleep at least 1 second before restarting run svprocesses.
  * runsv.c: use status[19] for state information; control pipe supports e.
  * runsvstat.c: new option -l: only show log service if -l is given; use
    status[19] for state.
  * runsvchdir: new; change directory runsvdir is running in (switch
    runlevels).
  * man/runsvchdir.8, doc/runsvchdir.8.html: new.
  * svwaitdown.c: -k option: only kill service that still are up on timeout.

runit 0.6.0
Fri, 27 Sep 2002 16:34:57 +0200
  * man/runsv.8, man/runsvdir.8: new.
  * doc: use runsvdir/runsv instead of svscanboot/supervise.
  * svwaitdown.c, svwaitup.c, man/svwaitdown.8, man/svwaitup.8: services
    must start with slash.
  * svwaitdown: new option -x: wait for runsv to exit instead for the
    service to be down; new option -k: SIGKILL still running services if
    timeout is reached.
  * stage 3: use new svwaitdown options.

runit 0.5.3
Mon, 23 Sep 2002 16:25:07 +0200
  * runsv, runsvdir: new; svscan/supervise replacement.
  * etc/runit/2: use runsvdir instead of svscanboot.
  * runsvstat.c: new; svstat for runsv.
  * runsvctrl.c: new; svc for runsv.
  * runsvdir.c, runsv.c: code cleanup.
  * utmpset.c: setlock utmp and wtmp file.

runit 0.5.0
Wed, 28 Aug 2002 11:18:28 +0200
  * utmpset: avoids libutil; compiles with deitlibc; built by default.
  * doc/usedietlibc.html: fix description.
  * getty-*/run: add utmpset.

runit 0.4.1
Mon, 24 Jun 2002 15:53:11 +0200
  * utmpset.c: new option -w: additionally write wtmp record.

runit 0.4.0
Sun, 19 May 2002 12:28:29 +0200
  * src/: include public domain sources to build byte.a, unix.a, time.a: